done with bug fixes

--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-banner/upload-banner.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-banner/upload-banner.component.scss
@@ -14,10 +14,9 @@
     }
 
     .pos {
-        position : absolute;
-        top      : 0;
-        right    : 0;
-        font-size: -webkit-xxx-large;
+        position: absolute;
+        top     : 5px;
+        right   : 5px;
     }
 
     .border-radius {
