--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.scss
@@ -15,9 +15,8 @@
 
     .pos {
         position : absolute;
-        top      : 0;
-        right    : 0;
-        font-size: -webkit-xxx-large;
+        top      : 5px;
+        right    : 5px;
     }
 
     .border-radius {
