--- a/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-add/partner-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-add/partner-add.component.html
@@ -59,7 +59,7 @@
     </div>
     <kt-portlet-footer>
         <div class="p-3">
-            <kt-modal-footer (action)="action($event)"></kt-modal-footer>
+            <kt-modal-footer (action)="action($event)" [value]="data.action"></kt-modal-footer>
         </div>
     </kt-portlet-footer>
 </div>
