--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-banner/upload-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-banner/upload-banner.component.html
@@ -1,18 +1,32 @@
+<kt-toastr #toastr></kt-toastr>
+<ngx-spinner></ngx-spinner>
 <kt-portlet>
     <kt-portlet-header [title]="'Upload Banner'"></kt-portlet-header>
     <kt-portlet-body>
         <div class="row">
             <div class="col-4 kt-padding-10" *ngFor="let image of images;index as idx">
                 <div class="position-relative">
-                    <span class="pos" (click)="delete(idx);">&times;</span>
+
+                    <span class="pos" (click)="delete(idx);">
+                        <img src="../../../../../assets/media/icons/cancel.svg" alt="">
+                    </span>
                     <img [src]="image" *ngIf="image" class="w-100 div-height border-radius" (click)="upload(idx)">
                 </div>
             </div>
             <div class="col-2 div-height kt-padding-10">
                 <input type="file" accept="image/*" class="d-none" #file (change)="uploadImages($event)">
-                <button (click)="file.click()" class="img-add">+</button>
+                <button (click)="file.click()" class="img-add">
+                    <img src="../../../../../assets/media/icons/add.svg" alt="">
+                </button>
             </div>
         </div>
-
     </kt-portlet-body>
+    <kt-portlet-footer>
+        <div class="row text-center p-3">
+            <div class="col-lg-12">
+                <kt-button [type]="'button'" [value]="'Save'" [isDisabled]="isDisabled" (click)="uploadBanners()">
+                </kt-button>
+            </div>
+        </div>
+    </kt-portlet-footer>
 </kt-portlet>
