--- a/gold-admin-frontend/src/app/views/partials/components/modal/modal-footer/modal-footer.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/modal/modal-footer/modal-footer.component.html
@@ -1,6 +1,6 @@
 <div class="row text-right">
     <div class="col-lg-12">
-        <kt-button [type]="'button'" [value]="'Add'" [isDisabled]="isDisabled" (click)="onSubmit()">
+        <kt-button [type]="'button'" [value]="value" [isDisabled]="isDisabled" (click)="onSubmit()">
         </kt-button>
         &nbsp;
         <kt-button [type]="'reset'" [value]="'Cancel'" (click)="closeModal()">
