--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-banner/upload-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-banner/upload-banner.component.html
@@ -8,7 +8,7 @@
                 <div class="position-relative">
 
                     <span class="pos" (click)="delete(idx);">
-                        <img src="../../../../../assets/media/icons/cancel.svg" alt="">
+                        <img src="../../../../../assets/media/icons/cancel.svg" alt="" class="kt-pointer">
                     </span>
                     <img [src]="image" *ngIf="image" class="w-100 div-height border-radius" (click)="upload(idx)">
                 </div>
