--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -1,4 +1,6 @@
 <kt-toastr #toastr></kt-toastr>
+<ngx-spinner type="ball-clip-rotate" size="medium"
+color="#3F56B5"></ngx-spinner>
 <kt-portlet>
     <kt-portlet-header [title]="'Upload Lender Banner'"></kt-portlet-header>
     <kt-portlet-body>
