--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -1,4 +1,5 @@
 <kt-toastr #toastr></kt-toastr>
+<ngx-spinner type="ball-clip-rotate" size="medium" color="#3F56B5"></ngx-spinner>
 <kt-portlet>
     <kt-portlet-header [title]="'Upload Offer'"></kt-portlet-header>
     <kt-portlet-body>
