--- a/gold-admin-frontend/src/app/views/pages/auth/auth.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/auth/auth.component.scss
@@ -152,7 +152,7 @@ kt-auth,
 
 input[type="text"]:focus,
 input[type="password"]:focus,
-input[type="number"]:focus {
+input[type="number"]:focus.login-form-input {
 	border : 2px solid #d7b56d;
 	outline: 0 none;
 }
