--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -23,7 +23,7 @@ color="#3F56B5"></ngx-spinner>
 
     </kt-portlet-body>
     <kt-portlet-footer>
-        <div class="row text-center p-3">
+        <div class="row p-3">
             <div class="col-lg-12">
                 <kt-button [type]="'button'" [value]="'Save'" [isDisabled]="isDisabled" (click)="uploadLenderBanners()">
                 </kt-button>
