--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.scss
@@ -23,4 +23,19 @@
         border       : transparent;
         border-radius: 20px !important;
     }
+    .per-gram {
+        display : inline-block;
+        position: relative;
+    }
+
+    /* position the unit to the right of the wrapper */
+    .per-gram::after {
+        position   : absolute;
+        top        : 11px;
+        right      : 1em;
+        transition : all .05s ease-in-out;
+        content    : 'Per gram';
+        color      : #707480;
+        font-weight: bold;
+    }
 }
