--- a/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
+++ b/gold-admin-frontend/src/app/views/theme/aside/aside-left.component.html
@@ -6,11 +6,13 @@
 	<!-- end:: Brand -->
 
 	<!-- BEGIN: Aside Menu -->
-	<div class="kt-aside-menu-wrapper kt-grid__item kt-grid__item--fluid" id="kt_aside_menu_wrapper" [ngStyle]="{'background':'#454D67'}">
+	<div class="kt-aside-menu-wrapper kt-grid__item kt-grid__item--fluid" id="kt_aside_menu_wrapper"
+		[ngStyle]="{'background':'#454D67'}">
 		<div #asideMenu ktMenu [options]="menuOptions" [perfectScrollbar]="{wheelPropagation: false}"
-			[ngStyle]="{'max-height': '100vh', 'position': 'relative','background':'#454D67','padding-bottom':'50px'}" id="kt_aside_menu" class="kt-aside-menu"
-			[ngClass]="htmlClassService.getClasses('aside_menu', true)">
-			<ul class="kt-menu__nav" [ngClass]="htmlClassService.getClasses('aside_menu_nav', true)">
+			[ngStyle]="{'max-height': '100vh', 'position': 'relative','background':'#454D67','padding-bottom':'50px'}"
+			id="kt_aside_menu" class="kt-aside-menu" [ngClass]="htmlClassService.getClasses('aside_menu', true)">
+			<ul class="kt-menu__nav" [ngClass]="htmlClassService.getClasses('aside_menu_nav', true)"
+				[ngStyle]="{'margin-bottom:':'75px'}">
 				<ng-container [ngTemplateOutlet]="menuListTemplate"></ng-container>
 			</ul>
 		</div>
