--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-3 font-weight-bold text-color d-flex align-items-center" placeholder="">Upload Gold Rate
             </div>
-            <div class="col-6">
+            <div class="col-3 per-gram">
                 <input type="text" class="form-control" numbersOnly [formControl]="goldRate"
                     [class.isError]="goldRate.invalid && goldRate.touched">
                 <mat-error *ngIf="goldRate.invalid && goldRate.touched">Field required</mat-error>
@@ -28,15 +28,15 @@
                 </button>
             </div>
         </div>
-
-        <kt-portlet-footer>
-            <div class="row text-center p-3">
-                <div class="col-lg-12">
-                    <kt-button [type]="'button'" [value]="'Save'" [isDisabled]="isDisabled" (click)="save()">
-                    </kt-button>
-                </div>
-            </div>
-        </kt-portlet-footer>
-
     </kt-portlet-body>
+    <kt-portlet-footer>
+        <div class="row p-3">
+            <div class="col-lg-12">
+                <kt-button [type]="'button'" [value]="'Save'" [isDisabled]="isDisabled" (click)="save()">
+                </kt-button>
+            </div>
+        </div>
+    </kt-portlet-footer>
+
+
 </kt-portlet>
