aside menu and  route structure

--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -8,7 +8,8 @@
         <div class="text-right">
             <a href="../../../../../assets/media/files/schemes.csv" download="schemes.csv"
                 *ngIf="tabGroup.selectedIndex == 1">
-                <span class="text-primary csv_pos">Download Sample CSV</span>
+                <span class="text-primary csv_pos">
+                    <img src="../../../../../assets/media/icons/download.svg" alt="download" height="24"> Download Sample CSV</span>
             </a>
         </div>
 
