--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-banner/upload-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-banner/upload-banner.component.html
@@ -25,7 +25,7 @@ color="#3F56B5"></ngx-spinner>
     <kt-portlet-footer>
         <div class="row p-3">
             <div class="col-lg-12">
-                <kt-button [type]="'button'" [value]="'Save'" [isDisabled]="isDisabled" (click)="uploadBanners()">
+                <kt-button [type]="'button'" [value]="'Save'" (click)="uploadBanners()">
                 </kt-button>
             </div>
         </div>
