--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -25,7 +25,7 @@ color="#3F56B5"></ngx-spinner>
     <kt-portlet-footer>
         <div class="row p-3">
             <div class="col-lg-12">
-                <kt-button [type]="'button'" [value]="'Save'" [isDisabled]="isDisabled" (click)="uploadLenderBanners()">
+                <kt-button [type]="'button'" [value]="'Save'" (click)="uploadLenderBanners()">
                 </kt-button>
             </div>
         </div>
