--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -32,7 +32,7 @@
     <kt-portlet-footer>
         <div class="row p-3">
             <div class="col-lg-12">
-                <kt-button [type]="'button'" [value]="'Save'" [isDisabled]="isDisabled" (click)="save()">
+                <kt-button [type]="'button'" [value]="'Save'"  (click)="save()">
                 </kt-button>
             </div>
         </div>
