--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -159,7 +159,7 @@
     </div>
     <kt-portlet-footer>
         <div class="p-3">
-            <kt-modal-footer (action)="action($event)" [isDisabled]="loading"></kt-modal-footer>
+            <kt-modal-footer (action)="action($event)" [value]="'Add'"></kt-modal-footer>
         </div>
     </kt-portlet-footer>
 
