--- a/gold-admin-frontend/src/app/views/pages/auth/sign-in-with-otp/sign-in-with-otp.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/sign-in-with-otp/sign-in-with-otp.component.html
@@ -5,7 +5,7 @@
     <p class="forgot-sub-title text-gray">Mobile number which end with xxxxx x{{mobile | slice:6:10}}</p>
 </div>
 
-<form [formGroup]="singInOtp">
+<form [formGroup]="singInOtp" autocomplete="off">
     <div class="row justify-content-center kt-margin-b-20">
         <div class="col">
             <input type="text" class="login-form-input text-center" numbersOnly maxlength="1" #one
