--- a/gold-admin-frontend/src/app/views/pages/user-management/roles/role-add/role-add.dialog.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/roles/role-add/role-add.dialog.component.html
@@ -67,7 +67,7 @@
     </div>
     <kt-portlet-footer>
         <div class="p-3">
-            <kt-modal-footer (action)="action($event)"></kt-modal-footer>
+            <kt-modal-footer (action)="action($event)" [value]="'Add'"></kt-modal-footer>
         </div>
     </kt-portlet-footer>
 </div>
