--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.scss
@@ -25,7 +25,7 @@
         right      : 30px;
         font-weight: 500;
         font-size  : 16px;
-        z-index    : 99999999999999999999999999999999999;
+        z-index    : 99999999999999999999999999999999999 !important;
     }
 
     .bg {
