--- a/gold-admin-frontend/src/app/app.component.html
+++ b/gold-admin-frontend/src/app/app.component.html
@@ -1,2 +1,4 @@
 <kt-splash-screen *ngIf="loader"></kt-splash-screen>
+<ngx-spinner type="ball-clip-rotate" size="medium"
+color="#3F56B5"></ngx-spinner>
 <router-outlet></router-outlet>
