--- a/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin-account/change-password/change-password.component.html
@@ -9,14 +9,14 @@
                     <form autocomplete="off" class="kt-form" [formGroup]="passwordForm" #form="ngForm" (submit)="submitForm()">
                         <mat-form-field class="w-100">
                             <mat-label>Old Password</mat-label>
-                            <input matInput placeholder="Old Password" type="password" formControlName="oldPassword">
+                            <input matInput placeholder="Old Password" type="password" formControlName="oldPassword" autocomplete="off">
                             <mat-error *ngIf="isControlHasError('oldPassword','required')">
                                 <strong>Enter Old Password</strong>
                             </mat-error>
                         </mat-form-field>
                         <mat-form-field class="w-100">
                             <mat-label>New Password</mat-label>
-                            <input matInput placeholder="Old Password" type="password" formControlName="newPassword">
+                            <input matInput placeholder="Old Password" type="password" formControlName="newPassword"  autocomplete="off">
                             <mat-error *ngIf="isControlHasError('newPassword','required')">
                                 <strong>Enter New Password</strong>
                             </mat-error>
@@ -30,7 +30,7 @@
                         <mat-form-field class="w-100">
                             <mat-label>Confirm Password</mat-label>
                             <input matInput placeholder="Old Password" type="password"
-                                formControlName="confirmPassword">
+                                formControlName="confirmPassword"  autocomplete="off">
                                 <mat-error *ngIf="isControlHasError('confirmPassword','required')">
                                         <strong>Enter Confirm Password</strong>
                                     </mat-error>
