--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-lender-banner/upload-lender-banner.component.html
@@ -1,26 +1,9 @@
 <kt-toastr #toastr></kt-toastr>
-<ngx-spinner type="ball-clip-rotate" size="medium"
-color="#3F56B5"></ngx-spinner>
+
 <kt-portlet>
     <kt-portlet-header [title]="'Upload Lender Banner'"></kt-portlet-header>
     <kt-portlet-body>
-        <div class="row">
-            <div class="col-4 kt-margin-t-10" *ngFor="let image of images;index as idx">
-                <div class="position-relative">
-                        <span class="pos" (click)="delete(idx);">
-                                <img src="../../../../../assets/media/icons/cancel.svg" alt="" class="kt-pointer">
-                            </span>
-                    <img [src]="image" *ngIf="image" class="w-100 div-height border-radius" (click)="upload(idx)">
-                </div>
-            </div>
-            <div class="col-2 div-height kt-margin-t-10">
-                <input type="file" accept="image/*" class="d-none" #file (change)="uploadImages($event)">
-                <button (click)="file.click()" class="img-add">
-                        <img src="../../../../../assets/media/icons/add.svg" alt="">
-                    </button>
-            </div>
-        </div>
-
+        <kt-uplod-data-image [images]="images"></kt-uplod-data-image>
     </kt-portlet-body>
     <kt-portlet-footer>
         <div class="row p-3">
