--- a/gold-admin-frontend/src/app/views/partials/components/uplod-data-image/uplod-data-image.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/uplod-data-image/uplod-data-image.component.html
@@ -8,7 +8,7 @@
                     <span class="pos" (click)="removeImages(idx);">
                         <img src="../../../../../assets/media/icons/cancel.svg" alt="" class="kt-pointer">
                     </span>
-                    <img [src]="image" *ngIf="image" class="w-100 div-height border-radius" (click)="edit(idx)">
+                    <img [src]="image" *ngIf="image" class="w-100 div-height border-radius" (click)="open(idx)">
                 </div>
             </div>
             <div class="col-2 div-height kt-margin-t-10">
