--- a/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.html
@@ -2,7 +2,7 @@
 <kt-portlet>
     <!-- PORTLET LOADING | Binded to TABLE Datasource -->
     <!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
-    <kt-portlet-header [title]="'Partners List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
+    <kt-portlet-header [title]="'Branch List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
 
         <ng-container ktPortletTools>
 
