--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -6,8 +6,7 @@
         </div>
         <div class="col-6">
             <kt-search *ngIf="showInput"></kt-search>
-            <kt-button [value]='value1' [type]='type1' class="kt-margin-r-10 kt-margin-l-10"></kt-button>
-            <kt-button [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
+            <kt-button [value]='value2' [type]='type2' (click)="action($event)" class="kt-margin-r-10 kt-margin-l-10"></kt-button>
 
             <!-- Toggle Button -->
             <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style"
