--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="row kt-margin-t-20">
                         <div class="col-3">
-                            <p class="text-color font-weight-bold">Select Partner ID</p>
+                            <p class="text-color font-weight-bold">Select Partner Name</p>
                         </div>
                         <div class="col-9">
                             <select name="" id="" class="form-control" formControlName="partnerId"
