--- a/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/partner/partner-list/partner-list.component.scss
@@ -1,5 +1,14 @@
 :host{
     .mat-column-actions {
-        flex: 0 0 210px !important;
+        flex: 0 0 25% !important;
+    }
+    .mat-column-partnerId{
+        flex: 0 0 25% !important;
+    }
+    .mat-column-name{
+        flex: 0 0 25% !important;
+    }
+    .mat-column-commission{
+        flex: 0 0 15% !important;
     }
 }
