--- a/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/user-management/branch/branch-list/branch-list.component.scss
@@ -1,5 +1,8 @@
 :host{
     .mat-column-actions {
-        flex: 0 0 210px !important;
+        flex: 0 0 25% !important;
+    }
+    .mat-column-branchId {
+        flex: 0 0 15% !important;
     }
 }
