--- a/gold-admin-frontend/src/app/views/theme/base/base.component.scss
+++ b/gold-admin-frontend/src/app/views/theme/base/base.component.scss
@@ -12,4 +12,10 @@ kt-base {
 		opacity: 1;
 		transition: opacity 1s ease-in-out;
 	}
+	.margin-top{
+		margin-top: -15px !important;
+	}
+	.kt-content{
+		padding:  0;
+	}
 }
