--- a/gold-admin-frontend/src/app/views/pages/customer-setting/customer-grid/customer-grid.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-setting/customer-grid/customer-grid.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row justify-content-center">
     <div class="card" *ngFor="let customer of customers;index as i">
         <div class="bg-white">
             <img src="../../../../../assets/media/users/default.jpg" alt="test " [class.d-none]="i%9!=0">
