--- a/gold-admin-frontend/src/app/views/partials/components/modal/modal-header/modal-header.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/modal/modal-header/modal-header.component.html
@@ -2,4 +2,7 @@
     <div class="kt-portlet__head-label">
         <h3 class="kt-portlet__head-title text-color">{{ title | titlecase }}</h3>
     </div>
+    <div class="align-self-center">
+        <img src="../../../../../../assets/media/icons/cancel.svg" alt="" class="kt-pointer" (click)="closeModal()">
+    </div>
 </div>
