--- a/gold-admin-frontend/src/app/views/theme/base/base.component.html
+++ b/gold-admin-frontend/src/app/views/theme/base/base.component.html
@@ -20,9 +20,9 @@
 				<!-- end:: Header -->
 
 				<!-- begin:: Content -->
-				<div class="kt-content kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content" [ngClass]="{'kt-content--fit-top': fitTop}">
+				<div class="kt-content kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor margin-top " id="kt_content" [ngClass]="{'kt-content--fit-top': fitTop}" >
 					<!-- begin:: Content Head -->
-					<kt-subheader *ngIf="subheaderDisplay"></kt-subheader>
+					<!-- <kt-subheader *ngIf="subheaderDisplay"></kt-subheader> -->
 					<!-- end:: Content Head -->
 
 					<!-- begin:: Content Body -->
