--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
@@ -2,7 +2,7 @@
 
     <kt-portlet-body>
 
-        <div class="mat-table__wrapper" >
+        <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                 matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
@@ -35,13 +35,14 @@
 
                 <ng-container matColumnDef="date">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.updatedAt | date:'mediumDate'}}</mat-cell>
+                    <mat-cell *matCellDef="let role">{{role.updatedAt | date:'mediumDate'}},
+                        {{role.updatedAt | date:'shortTime'}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="time">
+                <!-- <ng-container matColumnDef="time">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Time</mat-header-cell>
                     <mat-cell *matCellDef="let role">{{role.updatedAt | date:'shortTime'}}</mat-cell>
-                </ng-container>
+                </ng-container> -->
 
                 <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
@@ -73,8 +74,8 @@
             <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
             <!-- MATERIAL PAGINATOR | Binded to dasources -->
             <!-- See off.documentations 'https://material.angular.io/components/paginator/overview' -->
-            <mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]" [length]="dataSource.paginatorTotal$ | async"
-                [showFirstLastButtons]="true"></mat-paginator>
+            <mat-paginator [pageSize]="25" [pageSizeOptions]="[10,25,50,100]"
+                [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
         </div>
     </kt-portlet-body>
 </kt-portlet>
