--- a/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-
-=======
 <kt-portlet>
 
     <kt-portlet-body>
@@ -38,8 +35,10 @@
 
                 <ng-container matColumnDef="date">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.updatedAt | date:'mediumDate'}},
-                        {{role.updatedAt | date:'shortTime'}}</mat-cell>
+                    <mat-cell *matCellDef="let role">
+                        <ng-container class="d-block">{{role.updatedAt | date:'mediumDate'}},</ng-container>
+                        <ng-container class="d-block">{{role.updatedAt | date:'shortTime'}}</ng-container>
+                        </mat-cell>
                 </ng-container>
 
                 <!-- <ng-container matColumnDef="time">
@@ -82,4 +81,3 @@
         </div>
     </kt-portlet-body>
 </kt-portlet>
->>>>>>> bhushan
