--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -274,3 +274,11 @@ mat-header-row{
     padding: 0 10px !important;
 	}
 }
+
+.mat-table{
+	font-family: Poppins, Helvetica, sans-serif !important;
+}
+
+.mat-cell, .mat-footer-cell{
+	font-size: 12px !important;
+}
