--- a/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/lead-management/lead-management.component.html
@@ -2,7 +2,7 @@
 
     <kt-portlet-body>
 
-        <div class="mat-table__wrapper">
+        <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                 matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
@@ -34,10 +34,10 @@
                 </ng-container>
 
                 <ng-container matColumnDef="date">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Date & Time</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <ng-container class="d-block">{{role.updatedAt | date:'mediumDate'}},</ng-container>
-                        <ng-container class="d-block">{{role.updatedAt | date:'shortTime'}}</ng-container>
+                        <span class="d-block">{{role.updatedAt | date:'mediumDate'}},&nbsp;</span>
+                        <span class="d-block">{{role.updatedAt | date:'shortTime'}}</span>
                         </mat-cell>
                 </ng-container>
 
